2006-06-06  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcellrenderertext.c: Revert last commit, it triggers issues
	in too many places. Reopen N#31043

2006-06-02  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gtk/gtkwindow.c (gtk_window_key_release_event): Chain up to
	key_release_event, not key_press_event (#343677)

2006-06-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkviewport.c (viewport_set_adjustment): Really fix M#352

2006-06-01  Marius Vollmer  <marius.vollmer@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_leave_notify): Do not reset
	pressed_button so that a drag can start even if the pointer leaves the
	widget before crossing the drag threshold. N#29366
	
2006-06-01  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreemodelfilter.c
	(gtk_tree_model_filter_convert_child_path_to_path): need to use
	gtk_tree_model_filter_get_iter_full() since the path returned
	by gtk_real_tree_model_filter_convert_child_path_to_path() includes
	invisible nodes. N#28032

2006-05-31  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_render): When
	switching on the auto-ellipsation make sure the initial rendering is
	also ellipsized. N#31495

2006-05-31  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcellrenderertext.c: add an internal "auto_ellipsize_set"
	flag for auto-ellipsation, and never touch "ellipsize_set", so
	setting ellipsation explicitely makes the cell renderer behave
	like upstream. Fixes N#31043.

2006-05-31  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_create_button)
	(gtk_tree_view_column_update_button): Make the alignment expand its
	child to fill the whole allocation and if the child widget isa GtkMisc
	pass on the column xalignment. This lets ellipsizing labels as column
	headers expand and align correctly. #342113, N#31444

2006-05-29  Tommi Komulainen  <tommi.komulainen@nokia.com>
